Added: write to tex

--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -9,6 +9,7 @@ V		Teori
 			
 K		Metode
 			Algorigmer: Jacobi, rhomax, unittests
+			valg av epsilon ("0")
 			
 		Resultat
 			1b (2 tab): N, lambda jacboi,
@@ -16,10 +17,10 @@ K		Metode
 					kommentar: lambda svarer til energi ... 
 			1e	 (tab) omega, lambda, E
 			tid
-			Jacobi v armadillo
-			Similarity transforms (iterations) v N
+			tab: time (N, Jacobi v armadillo, 			Similarity transforms (iterations))
+
 		Diskusjon
-			Sammenligne konvergenshastighet  1b
+
 			
 		Konklusjon
 		
