Tweaking output-files

--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -34,3 +34,11 @@ Program:
 	similiraty transforms v N
 	
 	
+	
+	
+	\begin{table}[H]\caption{This is a table listing the computing time for each algorithm. The LU algorithm was only possible to do up till $ n=1e4 $ and the entry of 0 s means that this algorithm did not compute anything for the given value of n}
+		\label{tab:time}
+		\begin{tabular}{cccc}
+			\input{../Outfiles/results_omega.txt}
+		\end{tabular}
+	\end{table}
