Started on method, fixed tables

--- a/Tex/method.tex
+++ b/Tex/method.tex
@@ -7,3 +7,28 @@ s &= \sin \theta = \tan \theta \cos \theta = t c\\
 \end{align*}
 
 \subsection{The algorithm}
+
+
+
+	Metode
+Algorigmer: Jacobi, rhomax
+valg av epsilon ("0")
+
+Forelesning: Konvergens etter mellom 12n3 og 20n3, vi har mye kjappere!!!!!
+
+
+\subsection{Unit tests}
+
+In this project we used two unit tests to ensure that the program performs as expected and delivers accurate enough results. 
+
+One way to be sure that our algorithm gives correct answers is to task it to find the eigenvalues of a matrix with known eigenvalues. These values had been pre calculated by Matlab. 
+
+The other unit test we utilized was to check that our algorithm to find the largest off-diagonal elements actually found the largest off-diagonal elements. This was done by setting up a known matrix and tasking our algorithm to find the largest off-diagonal element and checking it against the manually found largest element. 
+
+
+
+
+Other tests: Orthogonality, norm(A) = norm(B), symmetric
+
+
+\textbf{HVORFOR SØKER VI BARE ØVRE HALVDEL???????????????????????????????????????}
