--- a/Tex/kilder.bib
+++ b/Tex/kilder.bib
@@ -8,3 +8,19 @@ Lecture Notes Fall 2015},
   year         = 2015,
   note         = {Chapter 2 and 6}
 }
+
+
+@article{litterature,
+	title = {Two electrons in an external oscillator potential: Particular analytic solutions of a Coulomb correlation problem},
+	author = {Taut, M.},
+	journal = {Phys. Rev. A},
+	volume = {48},
+	issue = {5},
+	pages = {3561--3566},
+	numpages = {0},
+	year = {1993},
+	month = {Nov},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevA.48.3561},
+	url = {https://link.aps.org/doi/10.1103/PhysRevA.48.3561}
+}
