Made proposal for introduction, abstract and conclusion
Also added some thouths in discussion

--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -1,23 +1,1 @@
-
-
-		Abstract
-
-		Intro
-		
-V		Teori
-						
-			
-K	
-		Resultat
-			1b (2 tab): N, lambda jacboi,
-							  N, lambda arma
-					kommentar: lambda svarer til energi ... 
-			1e	 (tab) omega, lambda, E
-			tid
-			tab: time (N, Jacobi v armadillo, 			Similarity transforms (iterations))
-
-		Diskusjon
-
-			
-		Konklusjon
-		
+In this report we used Jacobi's method to solve the eigenvalue problems of finding the energy of a single electron in a harmonic potential and two electrons in a harmonic potential that are interacting by a Coulomb potential. The results were the energies of the ground state of the single electron and the energies of the ground state for the two electrons for different oscillator frequencies. How the eigenvalues converge with Jacobi's method for increasing mesh points was investigated and the CPU time of Jacobi's method was compared to armadillo's solver for eigenvalues, to be able to analyse the method.
