--- a/Tex/result.tex
+++ b/Tex/result.tex
@@ -1,5 +1,5 @@
 
-\begin{table}[H]\caption{Convergence of eigenvalues for the non-interacting case using the Jacobi method}
+\begin{table}[H]\caption{Convergence of eigenvalues for the non-interacting case using the Jacobi method. The energies corresponding to the eigenvalues $\lambda_1$, $\lambda_2$ and $\lambda_3$ are ?? eV, ?? eV and ?? eV respectively.}
 	\label{tab:eigval}
 	\begin{tabular}{cccc}
 		\input{../Outfiles/result_eigval.txt}
