--- a/Tex/result.tex
+++ b/Tex/result.tex
@@ -22,4 +22,7 @@
 	\begin{tabular}{cccc}
 		\input{../Outfiles/results_omega.txt}
 	\end{tabular}
-\end{table}x
+\end{table}
+
+Forelesning: Konvergens etter mellom 12n3 og 20n3, vi har mye kjappere!!!!! - fordi sym!!!
+$ \omega_r= 0.25 $ gir 1/2 verdien av egenverdien gitt for tilfellet n=2 i \cite{litterature}. 
