--- a/Tex/method.tex
+++ b/Tex/method.tex
@@ -21,11 +21,9 @@ Thus  it is sufficient to search only the elements above the diagonal for the hi
 
 
 
-Velger for hvilken $ \tau $ har $ \mp $?????
+\textbf{Velger for hvilken $ \tau $ har $ \mp $?????
 Hvorfor deler på?????
-OBS: FEIL I TEORI : skal være -tau!!!
-
-
+}
 
 \begin{align}
 t &= \frac{(-\tau \pm \sqrt{1+\tau^2})(-\tau \mp \sqrt{1+ \tau^2})}{-\tau \mp \sqrt{1+\tau^2}}\\
