--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -147,7 +147,7 @@ We define $\tan \theta = t = s/c$ and $\cot 2\theta = \tau = \frac{a_{ll} - a_{k
 \]
 Which then comes down to:
 \begin{align*}
-t &= \tau \pm \sqrt{1+\tau^2}\\ 
+t &= -\tau \pm \sqrt{1+\tau^2}\\ 
 c &= \cos \theta = \frac{1}{\sqrt{1+\tan^2\theta}} = \frac{1}{\sqrt{1+t^2}}\\
 s &= \sin \theta = \tan \theta \cos \theta = t c\\
 \end{align*}
