--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -1,4 +1,4 @@
 In this report we used Jacobi's method to solve the eigenvalue problems of finding the energy of a single electron in a harmonic potential and two electrons in a harmonic potential that are interacting by a Coulomb potential. The results were the energies of the ground state of the single electron and the energies of the ground state for the two electrons for different oscillator frequencies. How the eigenvalues converge with Jacobi's method for increasing mesh points was investigated and the CPU time of Jacobi's method was compared to armadillo's solver for eigenvalues, to be able to analyse the method.
 
 
-The program used in this project can be found at \href{https://github.com/kjetka/Project2}{Github}
+The program used in this project can be found at \href{https://github.com/kjetka/Project2}{Github}. 
