--- a/Tex/result.tex
+++ b/Tex/result.tex
@@ -6,7 +6,7 @@
 	\end{tabular}
 \end{table}
 
-
+Energien til 3,7,11	
 
 
 \begin{table}[H]\caption{Comparisson of the time used between the Jacobi-algorithm and the Armadillo function  $eig\_sym$ as a function of the mesh size N of matrix A. "Transforms" refers to the amount of similarity transforms the Jacobi method uses.}
