--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -146,8 +146,8 @@ We define $\tan \theta = t = s/c$ and $\cot 2\theta = \tau = \frac{a_{ll} - a_{k
 \tau = \frac{1}{2}(t- (\tau - 2t)) \implies t^2 + 2\tau t-1 = 0
 \]
 Which then comes down to:
-\begin{align*}
-t &= -\tau \pm \sqrt{1+\tau^2}\\ 
-c &= \cos \theta = \frac{1}{\sqrt{1+\tan^2\theta}} = \frac{1}{\sqrt{1+t^2}}\\
-s &= \sin \theta = \tan \theta \cos \theta = t c\\
-\end{align*}
+\begin{align}
+t &= -\tau \pm \sqrt{1+\tau^2} \label{eq: t} \\ 
+c &= \cos \theta = \frac{1}{\sqrt{1+\tan^2\theta}} = \frac{1}{\sqrt{1+t^2}} \label{eq: c}\\
+s &= \sin \theta = \tan \theta \cos \theta = t c \label{eq: s}\\
+\end{align}
