--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -70,15 +70,12 @@ Because of good scaling, this case is almost the same eigenvalue problem as befo
 
 This equation has analytical solutions for some frequencies and the resulting energies are listed in \ref{tab:analytical_energies}.
 
-\begin{table}[H]\caption{This table lists the eneries of the three lowest states in the ground state for two electrons in the harmonic potential and Coulomb potential.}\label{tab:analytical_energies}
-\begin{tabular}{cccc}
-Frequency [] & & Energies & [eV]\\
-$\omega_r$ & $E_1$ & $E_2$ & $E_3$\\\hline
-0,001 & 1 & 2 & 3\\
-0,5 & 1 & 2 & 3\\
-1,0 & 1 & 2 & 3\\
-5,0 & 1 & 2 & 3\\
-10,0 & 1 & 2 & 3\\
+\begin{table}[H]\caption{This table lists the eneries of the lowest states in the ground state for two electrons in the harmonic potential and Coulomb potential \cite{taut1993two}.}\label{tab:analytical_energies}
+\begin{tabular}{cc}
+Frequency [] & Energies $\left[\frac{\hbar^2}{m \alpha^2}\right]$\\
+$\omega_r$ & $\lambda_0$\\ \hline
+0.005 & 0.35\\
+0.25 & 1.25\\
 \end{tabular}
 \end{table}
 
