--- a/Tex/result.tex
+++ b/Tex/result.tex
@@ -1,13 +1,13 @@
 
-\begin{table}[H]\caption{Convergence of eigenvalues for the non-interacting case using the Jacobi method. The energies corresponding to the eigenvalues $\lambda_0$, $\lambda_1$ and $\lambda_2$ are ?? eV, ?? eV and ?? eV respectively.}
+\begin{table}[H]\caption{Convergence of three smallest eigenvalues for the non-interacting case using the Jacobi method.}
 	\label{tab:eigval}
 	\begin{tabular}{cccc}
 		\input{../Outfiles/result_eigval.txt}
 	\end{tabular}
 \end{table}
 
-Energien til 3,7,11	
 
+The energies corresponding to the dimensionless energies $\lambda_1 = 3 $, $\lambda_2 = 7 $ and $\lambda_3 = 11$ are $ 81.6 $ eV,  $ 190.4 $ eV and $ 299.3 $ eV respectively. 
 
 \begin{table}[H]\caption{Comparisson of the time used between the Jacobi-algorithm and the Armadillo function  $eig\_sym$ as a function of the mesh size N of matrix A. "Transforms" refers to the amount of similarity transforms the Jacobi method uses.}
 	\label{tab:time}
