--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -1,6 +1,10 @@
+In this report we are looking at how to solve an eigenvalue problem using Jacobi's method. The eigenvalue problem we will solve is the Schrödinger Equation for the ground state and the harmonic oscillator potential. This section is based on  the lecture notes written by Jensen \cite{Jensen}. 
+
 \subsection{Dimensionless and scaled Schrödinger Equation}
 
-In this report we are looking at how to solve an eigenvalue problem using Jacobi's method. The eigenvalue problem we will solve is the Schrödinger Equation for the ground state and the harmonic oscillator potential. 
+
+
+
 We then start out with the one particle radial Schrödinger Equation (Equation \ref{eq:radial_SE} for the ground state which means that the quantum number $l = 0$. Here $R$ is the radial part of the wave function, $r$ is the distance from the origin to the electron, $m$ is the mass of the particle, $\hbar$ is Planck's constant and $E$ is the energy. The harmonic oscillator potential is shown in Equation \ref{eq:harmonic_potential}. Here $k$ is the wave number and $\omega$ is the oscillator frequency.
 
 \begin{equation}\label{eq:radial_SE}
