--- a/Tex/result.tex
+++ b/Tex/result.tex
@@ -18,15 +18,18 @@ The energies corresponding to the dimensionless energies $\lambda_1 = 3 $, $\lam
 \end{table}
 
 
-As expected, the brute force method of the Jacobi algorithm is much slower than the algorithm used by armadillo and LAPACK. LAPACK is up to approximately 2 500 times faster. The higher calculation costs of the Jacobi method is also reflected in the amount of similarity transforms required.  
+As expected, the brute force method of the Jacobi algorithm is much slower than the algorithm used by armadillo and LAPACK. LAPACK is up to approximately 2 500 times faster. The higher calculation costs of the Jacobi method is also reflected in the amount of similarity transforms required.  In figure \ref{fig:n} the development of the amount of similarity transforms as a function of N was approximated with the function $ y = 1.806*(x-1.039)^2 + b $. This shows that for our tridiagonal matrix and choices of $ \epsilon $, the Jacobi method converges after approximately $1.81n^2 $ similarity transforms. 
 
+\Nyfigur{1}{../Outfiles/fit.pdf}{fig:n}{Number of similarity transforms as a function of N approximated with a non-linear least squares fit.}
 
-\begin{table}[H]\caption{Eigenvalues for the interacting case. All the calculations are done with a mesh size of N=400. $ \rho_{max} $ was set to $ 7.9 $ for all $ \omega_r $, except for $ \omega_r  = 0.01$ ( $ \rho_{max} =50$). }
+\begin{table}[H]\caption{Eigenvalues for the interacting case. All the calculations are done with a mesh size of N=400. . }
 	\label{tab:omega}
 	\begin{tabular}{cccc}
 		\input{../Outfiles/results_omega.txt}
 	\end{tabular}
 \end{table}
+
+
 
 Forelesning: Konvergens etter mellom 12n3 og 20n3, vi har mye kjappere!!!!! - fordi sym!!!
 $ \omega_r= 0.25 $ gir 1/2 verdien av egenverdien gitt for tilfellet n=2 i \cite{litterature}. 
