--- a/Tex/method.tex
+++ b/Tex/method.tex
@@ -6,7 +6,7 @@ c &= \cos \theta = \frac{1}{\sqrt{1+\tan^2\theta}} = \frac{1}{\sqrt{1+t^2}}\\
 s &= \sin \theta = \tan \theta \cos \theta = t c\\
 \end{align*}
 
-\subsection{The Jacobi algorithm}
+\subsection{The Jacobi algorithm} \label{jacobi}
 
 The essence of the algorithm is to continue to do similarity transforms on the matrix A until it is more or less diagonalized. Because the off-diagonal elements will approach $ 0 $, it is sufficient to count until the largest off-diagonal element is $ < 10^{-10} $. 
 
