--- a/Tex/result.tex
+++ b/Tex/result.tex
@@ -29,7 +29,4 @@ As expected, the brute force method of the Jacobi algorithm is much slower than 
 	\end{tabular}
 \end{table}
 
-
-
-Forelesning: Konvergens etter mellom 12n3 og 20n3, vi har mye kjappere!!!!! - fordi sym!!!
-$ \omega_r= 0.25 $ gir 1/2 verdien av egenverdien gitt for tilfellet n=2 i \cite{litterature}. 
+Table \ref{tab:omega} shows that higher values of $ \omega_r$ yields higher energies, which is as expected from section \ref{jacobi}. The values of $ \omega_r= 0.05   $ and $ \omega_r= 0.25   $  corresponds to exactly double that of what is found in the article by M. Taut, \cite{litterature}.  
